# camelCasing

./: .gitignore  README.md  pyproject.toml
camelCasing/: camelCasing.py
src/: camelCasing.py
src/camelCasing/: camel_case_generator.py
tests/: camel_case_test.py
